enabled pdfpages package

--- a/tex/dissertation.tex
+++ b/tex/dissertation.tex
@@ -13,6 +13,9 @@
 % Use the NMT 2013 thesis style
 %
 \usepackage{nmtthesis2013}
+\usepackage{pdfpages}
+
+
 %
 % Select the type of publication, one of these three.
 %
@@ -69,6 +72,14 @@ The orientations of Minna Bluff’s two major axes are strongly controlled by re
 
 a pinning and stabilizing point for the Ross Ice Shelf, possible controlling the calving line prior to the emergence of Ross Island, and 3) was a significant source of fresh volcanic material throughout much of the period recovered by ANDRILL MIS. For example, a kaersutite-bearing clast recovered from 822.78 mbsf in AND-1B yielded an age of 8.53±0.51 Ma, and was likely derived from Minna Bluff.  The results from this study can be incorporated into detailed glacier and ice-sheet models of the McMurdo Sound region, a critical area in the Ross Ice Sheet and global climate system. \cite{Jourdan:2007vi}
 
+\includepdf[pages={-}, landscape=true, addtolist={1, table, Table 1., foo1}]{table.pdf}
+
+\includepdf[pages={-}, landscape=true, addtolist={1, table, Table 2., foo2}]{table.pdf}
+
+\includepdf[pages={-}, landscape=true, addtolist={1, table, Table 3., foo3}]{table.pdf}
+
+\includepdf[pages={-}, landscape=true, addtolist={1, figure, Figure 1., foo3}]{figure.pdf}
+
 
 
 
@@ -100,7 +111,7 @@ a pinning and stabilizing point for the Ross Ice Shelf, possible controlling the
 \end{preface}
 %================================================================
 
-\chapter{Andrill}
+\chapter{Development of an age-depth model for ANDRILL MIS AND-1B drill core, McMurdo Sound, Antarctica}
 \chapter{Geochronology of Minna Bluff, Southern McMurdo Sound, Antartica}
 \section{Introduction}
 Minna Bluff is a large volcanic penisula 70km south of Ross Island, Antarctica
