updated chapter/section definition in config.yaml

--- a/tex/dissertation.tex
+++ b/tex/dissertation.tex
@@ -67,16 +67,11 @@
 %
 \begin{abstract}
 Minna Bluff has been a significant topographic barrier to the flow of the Ross Ice Shelf since the mid-Miocene. Detailed Ar-Ar analyses of kaersutite and sanidine phenocrysts, and groundmass concentrates from volcanic units indicate an overall west to east progression of volcanic activity.  Eruptions of basaltic to intermediate lavas, domes, and scoria cones started at ~12 Ma in at what is now the eastern most point of Minna Bluff, “Minna Hook.” Activity was centered in this area for ~4 Ma, constructing a pre-Minna Bluff island. Multiple glacial unconformities found at Minna Hook suggest repeated interaction with large warm-based, erosive ice sheets. Activity migrated westward from Minna Bluff Island at 7-8 Ma closing the gap created by the island and the mainland. Significant edifice construction continued until 4-5 Ma with sporadic and parasitic scoria cone eruptions, possibly associated with Mt. Discovery activity, continuing until 2 Ma. 
-\includepdf[pages={-}, landscape=true, addtolist={1, table, Table 1., foo1}]{../src/data/minna_bluff/tables/table.pdf}
 
 The orientations of Minna Bluff’s two major axes are strongly controlled by regional tectonic features. Minna Bluff’s E-W axis, McIntosh Cliffs, is sub-parallel to the Radial Lineament and the N-S axis, Minna Hook, appears as extension of faulting bounding the Terror Rift. The constructional evolution of the 70km long volcanic complex has an important role in interpreting the climate signals recovered by the ANDRILL Project. Minna Bluff influenced the material delivered to the AND-1B drill site (ANDRILL MIS 2006-2007) in three critical ways: 1) Minna Bluff diverted upstream material, 2) provided
 
 a pinning and stabilizing point for the Ross Ice Shelf, possible controlling the calving line prior to the emergence of Ross Island, and 3) was a significant source of fresh volcanic material throughout much of the period recovered by ANDRILL MIS. For example, a kaersutite-bearing clast recovered from 822.78 mbsf in AND-1B yielded an age of 8.53±0.51 Ma, and was likely derived from Minna Bluff.  The results from this study can be incorporated into detailed glacier and ice-sheet models of the McMurdo Sound region, a critical area in the Ross Ice Sheet and global climate system. \cite{Jourdan:2007vi}
 
-
-\includepdf[pages={-}, landscape=true, addtolist={1, table, Table 2., foo1}]{../src/data/minna_bluff/tables/table.pdf}
-
-\includepdf[pages={-}, landscape=true, addtolist={1, table, Table 3, foo1}]{../src/data/minna_bluff/tables/table.pdf}
 
 
 
@@ -89,6 +84,7 @@ a pinning and stabilizing point for the Ross Ice Shelf, possible controlling the
 
 \end{acknowledgments}
 %----------------------------------------------------------------
+\setcounter{tocdepth}{4}
 \tableofcontents
 %
 % If you have no tables, comment out \listoftables.
@@ -112,24 +108,34 @@ a pinning and stabilizing point for the Ross Ice Shelf, possible controlling the
 \chapter{Geochronology of Minna Bluff, Southern McMurdo Sound, Antartica}
 \section{Introduction}
 Minna Bluff is a large volcanic penisula 70km south of Ross Island, Antarctica
+
 \section{Geology}
 \subsection{Volcanic}
 This section describes the glacial geology of Minna Bluff. Here is the text
 wrapping around and a displaying a the outer indentation
+
+\subsubsection{Felsic}
+\subsubsection{Basaltic}
 \subsection{Glacial}
 This section describes the volcanic geology of Minna Bluff. Here is the text
 wrapping around and a displaying a the outer indentation
+
 \section{Methods}
 \subsection{Ar-Ar}
+\subsection{Electron Microprobe}
 \section{Results}
-\subsection{Ar-Ar Laser Fusion}
-\subsection{Ar-Ar Step Heating}
 \section{Discussion}
 \chapter{Development and Testing of a laser micro furnace for Ar-Ar analysis}
 \section{Design}
 \section{Testing}
 \section{Preliminary Results}
 \chapter{Pychron: Noble gas data acquisition and processing framework}
+\section{Hardware}
+\subsection{Extraction Line}
+\subsection{Lasers}
+\subsection{Mass Spectrometers}
+\section{Software}
+\section{Data Storage}
 
 \appendix
 \chapter{Ar-Ar data}
